test/expected/set_explicit-int=x.out
set explicit-int=x
                 ^
18: error: "x": invalid value for explicit-int; must be i, u, or {[u]{isl[l]}[,]}+
